--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,12 +19,6 @@ string(REPLACE "\n" "\\\n" ismrmrd_example_extended ${ismrmrd_example_extended})
 
 configure_file(embedded_xml.h.in embedded_xml.h)
 
-if (USE_SERIALIZATION_SUPPORT)
-    set(ISMRMRD_SERIALIZE_TEST
-          test_serialize.cpp
-          test_compression.cpp)
-endif()
-
 include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include ${Boost_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(test_ismrmrd
@@ -36,18 +30,28 @@ add_executable(test_ismrmrd
     test_channels.cpp
     test_xml_header.cpp
     test_quaternions.cpp
-    test_serialization.cpp
-    ${ISMRMRD_SERIALIZE_TEST}
-    test_ismrmrd.cpp
-    test_dataset.cpp)
+    test_ismrmrd.cpp)
+
+if (USE_SERIALIZATION_SUPPORT)
+    target_sources(test_ismrmrd
+          PRIVATE test_serialize.cpp
+          PRIVATE test_compression.cpp)
+endif()
+
+if (HDF5_FOUND)
+    target_sources(test_ismrmrd
+          PRIVATE test_dataset.cpp
+          PRIVATE test_serialization.cpp)
+endif()
 
 target_link_libraries(test_ismrmrd ismrmrd ${Boost_LIBRARIES})
 
 add_test(NAME check COMMAND test_ismrmrd )
 
-
+if (HDF5_FOUND)
 add_executable(benchmark_dataset
      benchmark_dataset.cpp)
      target_link_libraries(benchmark_dataset ismrmrd ${Boost_LIBRARIES})
 
 set_property(TARGET benchmark_dataset PROPERTY CXX_STANDARD 11)
+endif()
