--- a/include/version.in
+++ b/include/version.in
@@ -7,5 +7,6 @@
 #define ISMRMRD_XMLHDR_VERSION @ISMRMRD_VERSION_MINOR@
 #define ISMRMRD_GIT_SHA1_HASH "@ISMRMRD_GIT_SHA1@"
 #define ISMRMRD_DATASET_SUPPORT @ISMRMRD_DATASET_SUPPORT@
+#define ISMRMRD_SERIALIZATION_SUPPORT @ISMRMRD_SERIALIZATION_SUPPORT@
 
 #endif /* ISMRMRD_VERSION_H */
