Rev pugixml version, switch to mamba in devcontainer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,7 @@ endif ()
 # For more information see http://semver.org/
 set(ISMRMRD_VERSION_MAJOR 1)
 set(ISMRMRD_VERSION_MINOR 13)
-set(ISMRMRD_VERSION_PATCH 6)
+set(ISMRMRD_VERSION_PATCH 7)
 
 set(ISMRMRD_VERSION_STRING ${ISMRMRD_VERSION_MAJOR}.${ISMRMRD_VERSION_MINOR}.${ISMRMRD_VERSION_PATCH})
 set(ISMRMRD_SOVERSION ${ISMRMRD_VERSION_MAJOR}.${ISMRMRD_VERSION_MINOR})
@@ -207,19 +207,8 @@ set(ISMRMRD_TARGET_SOURCES
 )
 
 set(ISMRMRD_TARGET_LINK_LIBS ${ISMRMRD_DATASET_LIBRARIES})
-
-if (VCPKG_TARGET_TRIPLET) #VCPKG .
-    find_package(PugiXML CONFIG REQUIRED)
-    list(APPEND ISMRMRD_TARGET_LINK_LIBS pugixml)
-else ()
-    find_package(PugiXML REQUIRED)
-
-    message("Found system pugixml: ${PugiXML_INCLUDE_DIR} ${PugiXML_LIBRARY}")
-    list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
-    list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
-    list(APPEND ISMRMRD_TARGET_INCLUDE_DIRS ${PugiXML_INCLUDE_DIR})
-    list(APPEND ISMRMRD_TARGET_LINK_LIBS ${PugiXML_LIBRARY})
-endif ()
+find_package(PugiXML CONFIG REQUIRED)
+list(APPEND ISMRMRD_TARGET_LINK_LIBS pugixml::pugixml)
 
 if (build4GE)
    list(APPEND ISMRMRD_TARGET_LINK_LIBS pthread z dl)
