--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
   - mkl-include>=2022.0.0    # dev
   - ninja=1.10.2             # dev
   - numpy=1.22.1             # dev
-  - pugixml=1.11.4           # dev
+  - pugixml=1.11.4
   - pyfftw=0.12.0            # dev
   - python=3.9               # dev
   - scipy=1.7.1              # dev
