--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,7 +30,7 @@ add_executable(test_ismrmrd
     test_channels.cpp
     test_xml_header.cpp
     test_quaternions.cpp
-    test_serialization.cpp 
+    test_serialization.cpp
     test_dataset.cpp)
 
 target_link_libraries(test_ismrmrd ismrmrd ${Boost_LIBRARIES})
@@ -39,5 +39,7 @@ add_test(NAME check COMMAND test_ismrmrd )
 
 
 add_executable(benchmark_dataset
-    benchmark_dataset.cpp)
-    target_link_libraries(benchmark_dataset ismrmrd ${Boost_LIBRARIES})
+     benchmark_dataset.cpp)
+     target_link_libraries(benchmark_dataset ismrmrd ${Boost_LIBRARIES})
+
+set_property(TARGET benchmark_dataset PROPERTY CXX_STANDARD 11)
