--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - ninja=1.10.*
     - pugixml=1.12.1
   run:
-    - boost
+    - boost {{ boost }}
     - hdf5=1.10.6
     - fftw=3.3.9
     - pugixml=1.12.1
