--- a/include/version.in
+++ b/include/version.in
@@ -8,5 +8,6 @@
 #define ISMRMRD_GIT_SHA1_HASH "@ISMRMRD_GIT_SHA1@"
 #define ISMRMRD_DATASET_SUPPORT @ISMRMRD_DATASET_SUPPORT@
 #define ISMRMRD_SERIALIZATION_SUPPORT @ISMRMRD_SERIALIZATION_SUPPORT@
+#define ISMRMRD_CPP03_SUPPORT @ISMRMRD_CPP03_SUPPORT@
 
 #endif /* ISMRMRD_VERSION_H */
