--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -21,7 +21,7 @@ if (HDF5_FOUND)
 
 
     if (WIN32 AND (CMAKE_VERSION VERSION_GREATER_EQUAL 3.21))
-     install(TARGETS ismrmrd_read_timing_test DESTINATION bin 
+     install(TARGETS ismrmrd_read_timing_test DESTINATION bin
             RUNTIME_DEPENDENCIES
             PRE_EXCLUDE_REGEXES "api-ms-" "ex-ms"
             POST_EXCLUDE_REGEXES ".*system32/.*\\.dll"
@@ -31,7 +31,7 @@ if (HDF5_FOUND)
         install(TARGETS ismrmrd_read_timing_test DESTINATION bin)
         endif()
 
-    find_package(Boost 1.43 COMPONENTS program_options random)
+    find_package(Boost 1.80 COMPONENTS program_options random)
     if (WIN32)
         add_definitions(-DBOOST_ALL_NO_LIB)
         add_definitions(-DBOOST_ALL_DYN_LINK)
@@ -56,7 +56,7 @@ if (HDF5_FOUND)
             ismrmrd_phantom.cpp)
         target_link_libraries( ismrmrd_generate_cartesian_shepp_logan
             ismrmrd
-            ${Boost_PROGRAM_OPTIONS_LIBRARY}
+            Boost::program_options
             ${FFTW3_LIBRARIES})
 
         install(TARGETS ismrmrd_generate_cartesian_shepp_logan DESTINATION bin)
@@ -66,25 +66,25 @@ if (HDF5_FOUND)
             recon_cartesian_2d.cpp)
 		target_link_libraries( ismrmrd_recon_cartesian_2d
             ismrmrd
-            ${Boost_PROGRAM_OPTIONS_LIBRARY}
+            Boost::program_options
             ${FFTW3_LIBRARIES})
 
         install(TARGETS ismrmrd_recon_cartesian_2d DESTINATION bin)
 
         add_executable(ismrmrd_hdf5_to_stream ismrmrd_hdf5_to_stream.cpp)
-        target_link_libraries(ismrmrd_hdf5_to_stream ismrmrd ${Boost_PROGRAM_OPTIONS_LIBRARY})
+        target_link_libraries(ismrmrd_hdf5_to_stream ismrmrd Boost::program_options)
         install(TARGETS ismrmrd_hdf5_to_stream DESTINATION bin)
 
         add_executable(ismrmrd_stream_to_hdf5 ismrmrd_stream_to_hdf5.cpp)
-        target_link_libraries(ismrmrd_stream_to_hdf5 ismrmrd ${Boost_PROGRAM_OPTIONS_LIBRARY})
+        target_link_libraries(ismrmrd_stream_to_hdf5 ismrmrd Boost::program_options)
         install(TARGETS ismrmrd_stream_to_hdf5 DESTINATION bin)
 
         add_executable(ismrmrd_stream_recon_cartesian_2d stream_recon_cartesian_2d.cpp)
-        target_link_libraries(ismrmrd_stream_recon_cartesian_2d ismrmrd ${FFTW3_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY})
-        
+        target_link_libraries(ismrmrd_stream_recon_cartesian_2d ismrmrd ${FFTW3_LIBRARIES} Boost::program_options)
 
-        if (WIN32)       
-            install(TARGETS ismrmrd_stream_recon_cartesian_2d DESTINATION bin 
+
+        if (WIN32)
+            install(TARGETS ismrmrd_stream_recon_cartesian_2d DESTINATION bin
             RUNTIME_DEPENDENCIES
             PRE_EXCLUDE_REGEXES "api-ms-" "ex-ms"
             POST_EXCLUDE_REGEXES ".*system32/.*\\.dll"
