Added conan profile detection

--- a/.github/workflows/ismrmrd_conan_build.yml
+++ b/.github/workflows/ismrmrd_conan_build.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Conan Build
       run: |
         set -euo pipefail
+        conan profile detect --force
         conan install . --output-folder=build --build=missing
         cd build
         cmake .. -DCMAKE_TOOLCHAIN_FILE=conan_toolchain.cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE
