--- a/.github/workflows/ismrmrd_conan_build.yml
+++ b/.github/workflows/ismrmrd_conan_build.yml
@@ -35,6 +35,12 @@ jobs:
     - name: Conan Build
       run: |
         set -euo pipefail
+
+        # Make sure that the conanfile.py dependencies match the environment
+        for d in $(cat conanfile.py | grep "requires" | sed -e "s/[^\"]*\"\([a-z0-9]*\)\/\([0-9\.]*\)\")/\1=\2/g"); do
+            cat environment.yml | grep "$d" 2>&1 1>/dev/null
+        done
+
         conan profile detect --force
         conan install . --output-folder=build --build=missing
         cd build
