--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,13 @@
-find_package(Boost 1.43 COMPONENTS unit_test_framework filesystem)
+find_package(Boost COMPONENTS unit_test_framework filesystem)
 
 if (NOT Boost_UNIT_TEST_FRAMEWORK_FOUND)
     message("Boost Unit Test Framework not found. Not compiling tests")
     return()
 endif ()
 
-if (NOT Boost_USE_STATIC_LIBS)
+if (BUILD_STATIC)
+    set(Boost_USE_STATIC_LIBS On)
+else()
     add_definitions(-DBOOST_TEST_DYN_LINK)
 endif()
 
