Fix pugixml linkage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,12 +225,14 @@ if (BUILD_STATIC)
   if (WIN32)
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
   endif()
-  list(APPEND ISMRMRD_TARGET_LINK_LIBS pugixml::static)
+  set(ISMRMRD_PUGIXML_LIBRARIES pugixml::static)
   add_library(ismrmrd STATIC ${ISMRMRD_TARGET_SOURCES})
 else()
-  list(APPEND ISMRMRD_TARGET_LINK_LIBS pugixml::shared)
+  set(ISMRMRD_PUGIXML_LIBRARIES pugixml::shared)
   add_library(ismrmrd SHARED ${ISMRMRD_TARGET_SOURCES})
 endif()
+
+list(APPEND ISMRMRD_TARGET_LINK_LIBS ${ISMRMRD_PUGIXML_LIBRARIES})
 
 target_include_directories(ismrmrd PUBLIC ${ISMRMRD_TARGET_INCLUDE_DIRS})
 if (USE_HDF5_DATASET_SUPPORT)
