Update Windows build. Bump version to 1.14.3.

--- a/.github/workflows/ismrmrd_build.yml
+++ b/.github/workflows/ismrmrd_build.yml
@@ -2,16 +2,11 @@ name: CMake
 
 on:
   push:
-    branches:
-      - master
-
+    branches: [master]
+    tags: ["v*.*.*"]
   pull_request:
-    branches:
-      - master
-
-  release:
-    types:
-      - created
+    branches: [master]
+  workflow_dispatch:
 
 env:
   BUILD_TYPE: Release
