--- a/.github/workflows/ismrmrd_conda.yml
+++ b/.github/workflows/ismrmrd_conda.yml
@@ -1,10 +1,11 @@
+name: Conda
+
 on:
+  push:
+    branches: [master]
+    tags: ["v*.*.*"]
   pull_request:
-    branches:
-      - master
-  release:
-    types:
-      - created
+    branches: [master]
   workflow_dispatch:
 
 jobs:
