--- a/.github/workflows/ismrmrd_cpp98_smoketest.yml
+++ b/.github/workflows/ismrmrd_cpp98_smoketest.yml
@@ -1,9 +1,13 @@
 name: "C++98 Smoketest"
 
 on:
+  push:
+    branches: [master]
+    tags: ["v*.*.*"]
   pull_request:
-    branches:
-      - master
+    branches: [master]
+  workflow_dispatch:
+
 env:
   BUILD_TYPE: Release
 
@@ -11,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/build
