--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ endif ()
 # For more information see http://semver.org/
 set(ISMRMRD_VERSION_MAJOR 1)
 set(ISMRMRD_VERSION_MINOR 14)
-set(ISMRMRD_VERSION_PATCH 2)
+set(ISMRMRD_VERSION_PATCH 3)
 
 set(ISMRMRD_VERSION_STRING ${ISMRMRD_VERSION_MAJOR}.${ISMRMRD_VERSION_MINOR}.${ISMRMRD_VERSION_PATCH})
 set(ISMRMRD_SOVERSION ${ISMRMRD_VERSION_MAJOR}.${ISMRMRD_VERSION_MINOR})
@@ -169,12 +169,17 @@ find_package(FFTW COMPONENTS FLOAT_LIB)
 if (USE_HDF5_DATASET_SUPPORT)
     if (VCPKG_TARGET_TRIPLET) #VCPKG HDF5 is packaged differently.
         find_package(HDF5 CONFIG COMPONENTS C REQUIRED)
+        if (BUILD_STATIC)
+          set(ISMRMRD_DATASET_LIBRARIES hdf5::hdf5-static)
+        else()
+          set(ISMRMRD_DATASET_LIBRARIES hdf5::hdf5-shared)
+        endif()
     else ()
         find_package(HDF5 COMPONENTS C REQUIRED)
+        set(ISMRMRD_DATASET_LIBRARIES HDF5::HDF5)
     endif ()
     set(ISMRMRD_DATASET_SUPPORT true)
     set(ISMRMRD_DATASET_SOURCES libsrc/dataset.c libsrc/dataset.cpp)
-    set(ISMRMRD_DATASET_LIBRARIES HDF5::HDF5)
     message(STATUS "HDF5 include found at: ${HDF5_INCLUDE_DIRS}")
     message(STATUS "HDF5 libs found at: ${HDF5_C_LIBRARIES}")
 else ()
