--- a/.github/workflows/rpkg_build.yml
+++ b/.github/workflows/rpkg_build.yml
@@ -2,31 +2,31 @@ name: RPKG
 
 on:
   push:
-    branches:
-      - master
-  
+    branches: [master]
+    tags: ["v*.*.*"]
   pull_request:
-    branches:
-      - master
+    branches: [master]
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     container:
       image: fedora:37
     steps:
     - name: Install dependencies
       run: sudo dnf install rpkg git dnf-plugins-core -y
 
-    - uses: actions/checkout@v3
-      with: 
+    - uses: actions/checkout@v4
+      with:
         fetch-depth: 0
-    - name: Run RPKG 
+    - name: Run RPKG
       run: |
         git config --global --add safe.directory "*"
         chown -hR root "$GITHUB_WORKSPACE"
-        cd "$GITHUB_WORKSPACE" 
+        cd "$GITHUB_WORKSPACE"
         rpkg spec --outdir ./
         sudo dnf builddep -y ismrmrd.spec
         rm ismrmrd.spec
-        rpkg local 
+        rpkg local
